# robobuffers

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  pose_pubsub.cpp
examples/src/: pose_pub.cpp  pose_sub.cpp
include/robobuffers/: concepts.hpp  converters.hpp  expected.hpp  geom.hpp  messaging.hpp  meta.hpp  rotation.hpp  thread_pool.hpp
msgs/core/: header.fbs
msgs/geom/: accel.fbs  accel_stamped.fbs  odometry.fbs  pose.fbs  pose_stamped.fbs  quat.fbs  twist.fbs  twist_stamped.fbs  vec3.fbs  wrench.fbs  wrench_stamped.fbs
tests/: CMakeLists.txt
tests/src/: test_converters.cpp
